--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-simple-dropdown",
+  "name": "@sunsama/react-simple-dropdown",
   "version": "3.2.3",
   "description": "Non-prescriptive React.js dropdown toolkit",
   "main": "lib/components/dropdown.js",
